--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,13 @@
 		{
 			"type": "lime",
 			"command": "test",
+			"targetConfiguration": "HashLink",
+			"problemMatcher": [
+				"$haxe-absolute",
+				"$haxe",
+				"$haxe-error",
+				"$haxe-trace"
+			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
