--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ jobs:
         haxe-version: stable
         flixel-versions: release
         target: html5
+    - name: Extra Libs
+      run: |
+        haxelib install haxeui-core --quiet
+        haxelib install haxeui-flixel --quiet
     - name: Build
       run: haxelib run lime build html5
     - name: Deploy
