--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,21 @@
 {
 	"version": "0.2.0",
 	"configurations": [
-		
 		{
-			"name": "Build + Debug",
-			"type": "lime",
-			"request": "launch"
-		},
-		{
-			"name": "Debug",
-			"type": "lime",
+			"type": "hl",
+			"hxml": "build.hxml",
+			"name": "Launch HL",
+			"preLaunchTask": "HL",
+			"program": "export/Adventure.hl",
 			"request": "launch",
-			"preLaunchTask": null
-		},
-		{
-			"name": "Macro",
-			"type": "haxe-eval",
-			"request": "launch"
+			"cwd": "${workspaceFolder}",
+			"internalConsoleOptions": "openOnSessionStart",
+			"hotReload": true,
+			"presentation": {
+				"hidden": false,
+				"group": "debug",
+				"order": 1
+			}
 		}
 	]
 }
