--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         persist-credentials: "false"
+        submodules: recursive
     - uses: krdlab/setup-haxe@master
       with:
           haxe-version: 4.2.1
